plugins {
	id 'java'
	id 'org.springframework.boot' version '3.4.4'
	id 'io.spring.dependency-management' version '1.1.7'
	id 'com.google.protobuf' version '0.9.4'
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-aop'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-actuator:3.4.4'
	implementation 'io.micrometer:micrometer-tracing:1.5.0-M3'
	implementation 'io.micrometer:micrometer-tracing-bridge-brave:1.5.0-M3'
	implementation 'org.apache.commons:commons-lang3:3.17.0'
	implementation 'org.javassist:javassist:3.30.2-GA'

	// grpc dependencies
	implementation 'net.devh:grpc-spring-boot-starter:3.1.0.RELEASE'
	implementation 'io.grpc:grpc-netty-shaded:1.63.0'
	implementation 'com.google.protobuf:protobuf-java:4.30.2'
	implementation 'io.grpc:grpc-protobuf:1.63.0'
	implementation 'io.grpc:grpc-stub:1.63.0'
	implementation 'javax.annotation:javax.annotation-api:1.3.2'

	// apache pool
	implementation 'org.apache.commons:commons-pool2:2.12.1'


	compileOnly 'org.projectlombok:lombok:1.18.36'
	annotationProcessor 'org.projectlombok:lombok:1.18.36'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.projectlombok:lombok:1.18.36'
	annotationProcessor 'org.projectlombok:lombok:1.18.36'

	testImplementation 'org.mockito:mockito-core:5.16.1'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
	useJUnitPlatform()
}

test {
	jvmArgs = [
		"--add-opens=java.base/java.lang=ALL-UNNAMED"
	]
}

protobuf {
	protoc {
		artifact = "com.google.protobuf:protoc:4.30.2" // 使用与依赖相同的版本
	}

	plugins {
		grpc {
			artifact = 'io.grpc:protoc-gen-grpc-java:1.71.0' // 使用与gRPC相同的版本
		}
	}

	generateProtoTasks {
		all()*.plugins {
			grpc {}
		}
	}
}
